--- a/AlgoTraderSite/Content/Fonts.css
+++ b/AlgoTraderSite/Content/Fonts.css
@@ -27,7 +27,7 @@ Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
 [class*="icon-"] {
 */
-.icon-dollar, .icon-sort-by-alphabet, .icon-sort-by-alphabet-alt, .icon-lock, .icon-home, .icon-eye-open, .icon-cogs, .icon-exclamation-sign, .icon-plus-sign, .icon-minus-sign, .icon-remove-sign, .icon-ok-sign, .icon-trash, .icon-plus, .icon-minus, .icon-question-sign, .icon-info-sign, .icon-sort-by-attributes-alt, .icon-sort-by-attributes, .icon-sort-by-order, .icon-sort-by-order-alt, .icon-briefcase {
+.icon-home, .icon-eye-open, .icon-briefcase, .icon-cogs, .icon-plus-sign, .icon-minus-sign, .icon-ok-sign, .icon-remove-sign, .icon-exclamation-sign, .icon-question-sign, .icon-info-sign, .icon-plus, .icon-minus, .icon-sort-by-alphabet, .icon-sort-by-alphabet-alt, .icon-sort-by-attributes-alt, .icon-sort-by-attributes, .icon-sort-by-order, .icon-sort-by-order-alt, .icon-dollar, .icon-trash, .icon-shopping-cart, .icon-lock, .icon-book, .icon-bookmark {
 	font-family: 'algotrader';
 	speak: none;
 	font-style: normal;
@@ -37,69 +37,78 @@ you can use the generic selector below, but it's slower:
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
-.icon-dollar:before {
+.icon-home:before {
 	content: "\e000";
 }
-.icon-sort-by-alphabet:before {
+.icon-eye-open:before {
 	content: "\e001";
 }
-.icon-sort-by-alphabet-alt:before {
+.icon-briefcase:before {
 	content: "\e002";
 }
-.icon-lock:before {
+.icon-cogs:before {
 	content: "\e003";
 }
-.icon-home:before {
+.icon-plus-sign:before {
 	content: "\e004";
 }
-.icon-eye-open:before {
+.icon-minus-sign:before {
 	content: "\e005";
 }
-.icon-cogs:before {
+.icon-ok-sign:before {
 	content: "\e006";
 }
-.icon-exclamation-sign:before {
+.icon-remove-sign:before {
 	content: "\e007";
 }
-.icon-plus-sign:before {
+.icon-exclamation-sign:before {
 	content: "\e008";
 }
-.icon-minus-sign:before {
+.icon-question-sign:before {
 	content: "\e009";
 }
-.icon-remove-sign:before {
+.icon-info-sign:before {
 	content: "\e00a";
 }
-.icon-ok-sign:before {
+.icon-plus:before {
 	content: "\e00b";
 }
-.icon-trash:before {
+.icon-minus:before {
 	content: "\e00c";
 }
-.icon-plus:before {
+.icon-sort-by-alphabet:before {
 	content: "\e00d";
 }
-.icon-minus:before {
+.icon-sort-by-alphabet-alt:before {
 	content: "\e00e";
 }
-.icon-question-sign:before {
+.icon-sort-by-attributes-alt:before {
 	content: "\e00f";
 }
-.icon-info-sign:before {
+.icon-sort-by-attributes:before {
 	content: "\e010";
 }
-.icon-sort-by-attributes-alt:before {
+.icon-sort-by-order:before {
 	content: "\e011";
 }
-.icon-sort-by-attributes:before {
+.icon-sort-by-order-alt:before {
 	content: "\e012";
 }
-.icon-sort-by-order:before {
+.icon-dollar:before {
 	content: "\e013";
 }
-.icon-sort-by-order-alt:before {
+.icon-trash:before {
 	content: "\e014";
 }
-.icon-briefcase:before {
+.icon-shopping-cart:before {
 	content: "\e015";
+}
+.icon-lock:before {
+	content: "\e016";
+}
+.icon-book:before {
+	content: "\e017";
+}
+.icon-bookmark:before {
+	content: "\e018";
 }
