--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -281,15 +281,14 @@ label {
 }
 
 input, textarea, select {
-	border: 1px solid #ccc;
-	color: #3e4d5e;
+	border: 1px solid #c8c8c8;
 	border-radius: 3px;
 	margin: 0;
 	padding: 0;
-	-moz-transition: all .15s ease;
-	-o-transition: all .15s ease;
-	-webkit-transition: all .15s ease;
-	transition: all .15s ease;
+	-moz-transition: all .5s ease;
+	-o-transition: all .5s ease;
+	-webkit-transition: all .5s ease;
+	transition: all .5s ease;
 }
 
 	input[type="text"] {
@@ -301,28 +300,28 @@ input, textarea, select {
 
 	input:focus, textarea:focus {
 		outline-color: #33B5E5;
-		-webkit-box-shadow: 0px 0px 5px #33b5d5;
-		box-shadow: 0px 0px 5px #33b5d5;
+		-webkit-box-shadow: 0px 0px 3px #33b5d5;
+		box-shadow: 0px 0px 3px #33b5d5;
 	}
 
 	input[type="submit"],
 	input[type="button"],
 	button {
-		background-color: #eee;
+		background-color: #f3f3f3;
 		cursor: pointer;
 		font-weight: 700;
 		text-transform: uppercase;
 		padding: 8px 15px 8px 15px;
 		-webkit-text-shadow: 0px 1px 0px rgba(255,255,255,.5);
 		text-shadow: 0px 1px 0px rgba(255,255,255,.5);
-		-moz-transition: all .15s ease;
-		-o-transition: all .15s ease;
-		-webkit-transition: all .15s ease;
-		transition: all .15s ease;
+		-moz-transition: all .1s ease;
+		-o-transition: all .1s ease;
+		-webkit-transition: all .1s ease;
+		transition: all .1s ease;
 	}
 
-		input[type="submit"]:hover {
-			background-color: #ddd;
+		input[type="submit"]:hover, input[type="button"]:hover, button:hover {
+			background-color: #dadada;
 		}
 
 		input[type="submit"].symbol-button {
@@ -380,7 +379,6 @@ div.toggle {
 	.panel-watchlist input[type="radio"]:checked + label {
 		background-color: #8AD5F0;
 		border: 1px solid #33B5E5;
-		color: #444;
 		font-weight: 700;
 	}
 
@@ -416,7 +414,7 @@ div.toggle {
 		}
 
 			.input-group input[type="radio"] + label:hover, .input-group input[type="radio"]:checked + label {
-				background-color: #ddd;
+				background-color: #dadada;
 			}
 
 /* sliding switch */
@@ -568,6 +566,10 @@ table {
 		}
 
 	table tr.main td:nth-child(2) {
+		/*font-weight: 700;*/
+	}
+
+	table tr.main td.bold {
 		font-weight: 700;
 	}
 
