--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -1,8 +1,6 @@
 ﻿@charset "utf-8";
-@import url(http://fonts.googleapis.com/css?family=Fauna+One); /* serif */
 @import url(http://fonts.googleapis.com/css?family=Righteous); /* cursive */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300); /* sans-serif */
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,100,700); /* sans-serif */
 
 @font-face {
 	font-family: 'algotrader';
@@ -65,10 +63,8 @@ nav, section {
 	visibility: hidden;
 }
 
-h1, h2, h3,
-h4, h5, h6 {
-}
-
+/* text
+----------------------------------------------------------*/
 h1 {
 	font-size: 4em;
 	font-weight: 300;
@@ -173,16 +169,13 @@ footer {
 		background: none;
 		outline: none;
 		text-decoration: none;
-		-webkit-text-shadow: 0px 0px 0px rgba(0,0,0,0);
 		text-shadow: 0px 0px 0px rgba(0,0,0,0);
 		-moz-transition: all .25s ease;
 		-o-transition: all .25s ease;
-		-webkit-transition: all .25s ease;
 		transition: all .25s ease;
 	}
 
 		.site-title a:hover, .site-title a:active {
-			-webkit-text-shadow: 0px 0px 10px #363636;
 			text-shadow: 0px 0px 10px #363636;
 		}
 
@@ -210,7 +203,6 @@ ul#menu {
 			color: #999;
 			-moz-transition: all .15s ease;
 			-o-transition: all .15s ease;
-			-webkit-transition: all .15s ease;
 			transition: all .15s ease;
 		}
 
@@ -221,7 +213,6 @@ ul#menu {
 			ul#menu li a.selected {
 				-moz-transition: none;
 				-o-transition: none;
-				-webkit-transition: none;
 				transition: none;
 				color: #363636;
 				background-color: #ececec;
@@ -287,20 +278,17 @@ input, textarea, select {
 	padding: 0;
 	-moz-transition: all .5s ease;
 	-o-transition: all .5s ease;
-	-webkit-transition: all .5s ease;
 	transition: all .5s ease;
 }
 
 	input[type="text"] {
 		font-size: 1.2em;
 		padding: 8px;
-		-webkit-box-shadow: 0px 0px 1px rgba(0,0,0,.25) inset;
 		box-shadow: 0px 0px 1px rgba(0,0,0,.25) inset;
 	}
 
 	input:focus, textarea:focus {
 		outline-color: #33B5E5;
-		-webkit-box-shadow: 0px 0px 3px #33b5d5;
 		box-shadow: 0px 0px 3px #33b5d5;
 	}
 
@@ -312,12 +300,13 @@ input, textarea, select {
 		font-weight: 700;
 		text-transform: uppercase;
 		padding: 8px 15px 8px 15px;
-		-webkit-text-shadow: 0px 1px 0px rgba(255,255,255,.5);
 		text-shadow: 0px 1px 0px rgba(255,255,255,.5);
 		-moz-transition: all .1s ease;
 		-o-transition: all .1s ease;
-		-webkit-transition: all .1s ease;
 		transition: all .1s ease;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
 	}
 
 		input[type="submit"]:hover, input[type="button"]:hover, button:hover {
@@ -348,9 +337,11 @@ div.toggle {
 	color: #0099CC;
 	-moz-transition: all .15s ease;
 	-o-transition: all .15s ease;
-	-webkit-transition: all .15s ease;
 	transition: all .15s ease;
 	text-align: center;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 	div.toggle:hover {
@@ -403,14 +394,14 @@ div.toggle {
 			position: relative;
 			top: 10px;
 			-webkit-font-smoothing: antialiased;
-			-webkit-text-shadow: 0px 1px 0px rgba(255,255,255,.5);
 			text-shadow: 0px 1px 0px rgba(255,255,255,.5);
-			-webkit-box-shadow: 0px 0px 1px rgba(0,0,0,.5);
 			box-shadow: 0px 0px 1px rgba(0,0,0,.5);
 			-moz-transition: all .15s ease;
 			-o-transition: all .15s ease;
-			-webkit-transition: all .15s ease;
 			transition: all .15s ease;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
 		}
 
 			.input-group input[type="radio"] + label:hover, .input-group input[type="radio"]:checked + label {
@@ -425,7 +416,6 @@ input[type="checkbox"].onoffswitch-checkbox {
 .onoffswitch {
 	position: relative;
 	width: 90px;
-	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
@@ -447,7 +437,6 @@ input[type="checkbox"].onoffswitch-checkbox {
 	width: 200%;
 	margin-left: -100%;
 	-moz-transition: margin 0.3s ease-in 0s;
-	-webkit-transition: margin 0.3s ease-in 0s;
 	-o-transition: margin 0.3s ease-in 0s;
 	transition: margin 0.3s ease-in 0s;
 }
@@ -463,7 +452,6 @@ input[type="checkbox"].onoffswitch-checkbox {
 		font-family: Trebuchet, Arial, sans-serif;
 		font-weight: bold;
 		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
 		box-sizing: border-box;
 	}
 
@@ -493,7 +481,6 @@ input[type="checkbox"].onoffswitch-checkbox {
 	bottom: 0;
 	right: 56px;
 	-moz-transition: all 0.3s ease-in 0s;
-	-webkit-transition: all 0.3s ease-in 0s;
 	-o-transition: all 0.3s ease-in 0s;
 	transition: all 0.3s ease-in 0s;
 }
@@ -519,7 +506,6 @@ input[type="checkbox"].onoffswitch-checkbox {
 	top: 120px;
 	left: -262px;
 	font-size: 1.3em;
-	-webkit-box-shadow: 0px 1px 5px rgba(0,0,0,.5);
 	box-shadow: 0px 1px 5px rgba(0,0,0,.5);
 	-moz-animation: messageFadeOut 5s ease;
 	-o-animation: messageFadeOut 5s ease;
@@ -549,6 +535,8 @@ input[type="checkbox"].onoffswitch-checkbox {
 ----------------------------------------------------------*/
 table {
 	border-spacing: 0;
+	margin: 0;
+	padding: 0;
 	border: 0 none;
 	width: 100%;
 }
@@ -557,7 +545,6 @@ table {
 		background-color: #fcfcfc;
 		font-size: 1.4em;
 		margin-bottom: 15px;
-		-webkit-box-shadow: 0px 1px 3px rgba(0,0,0,.25);
 		box-shadow: 0px 1px 3px rgba(0,0,0,.25);
 	}
 
@@ -578,9 +565,7 @@ table {
 	}
 
 	table.main tr:first-child td {
-		padding-top: 10px;
-		padding-left: 10px;
-		padding-bottom: 10px;
+		padding: 10px 0 10px 10px;
 	}
 
 	table.sub td {
@@ -589,16 +574,21 @@ table {
 		padding-right: 10px;
 	}
 
+	table.sub th {
+		font-size: 1em;
+	}
+
 th {
+	font-size: 1.5em;
 	text-align: left;
 	border: none 0px;
 	text-transform: uppercase;
-	color: #c8c8c8;
+	color: #a3a3a3;
 	font-weight: 300;
 	padding-left: 10px;
 }
 
-	th a {
+	/*th a {
 		display: block;
 		position: relative;
 	}
@@ -630,7 +620,7 @@ th {
 
 		th.desc a:after {
 			content: '▼';
-		}
+		}*/
 
 @-moz-keyframes fadeIn {
 	from {
@@ -688,7 +678,6 @@ th {
 	}
 }
 
-
 @-webkit-keyframes messageFadeOut {
 	0% {
 		opacity: 0;
@@ -708,7 +697,6 @@ th {
 		opacity: 0;
 	}
 }
-
 
 @keyframes messageFadeOut {
 	0% {
