--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -155,6 +155,54 @@ footer {
 	min-height: 70vh;
 }
 
+.lightbox-wrapper {
+	position: fixed;
+	height: 50%;
+	width: 100%;
+	bottom: 0;
+	background: #000;
+	z-index: 50;
+	padding: 10px;
+}
+
+
+/*.lightbox-wrapper {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: .0;
+	filter: alpha(opacity=0);
+	z-index: 50;
+	display: none;
+}
+
+.lightbox-content {
+	position: absolute;
+	top: 20%;
+	left: 30%;
+	width: 500px;
+	height: 300px;
+	background: #ffffff;
+	z-index: 51;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: 0px 0px 5px #444444;
+	-webkit-box-shadow: 0px 0px 5px #444444;
+	box-shadow: 0px 0px 5px #444444;
+	display: none;
+}
+
+.lightbox-close {
+	float: right;
+	margin-right: 6px;
+	cursor: pointer;
+}*/
+
 /* site title
 ----------------------------------------------------------*/
 .site-title {
@@ -588,7 +636,7 @@ th {
 	padding-left: 10px;
 }
 
-	/*th a {
+/*th a {
 		display: block;
 		position: relative;
 	}
