--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -143,7 +143,16 @@ footer {
 	text-transform: uppercase;
 	padding-left: 10px;
 	font-weight: 700;
-	font-size: 2em;
+	font-size: 1.5em;
+}
+
+.panel-watchlist div.separator {
+	height: 20px;
+}
+
+.panel-watchlist span.cash {
+	padding-left: 10px;
+	font-size: 1.5em;
 }
 
 .panel-wrapper > .maincontent {
@@ -155,53 +164,9 @@ footer {
 	min-height: 70vh;
 }
 
-.lightbox-wrapper {
-	position: fixed;
-	height: 50%;
-	width: 100%;
-	bottom: 0;
-	background: #000;
-	z-index: 50;
-	padding: 10px;
+.buysell-wrapper {
+	font-size: 2em;
 }
-
-
-/*.lightbox-wrapper {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
-	background: #000;
-	opacity: .0;
-	filter: alpha(opacity=0);
-	z-index: 50;
-	display: none;
-}
-
-.lightbox-content {
-	position: absolute;
-	top: 20%;
-	left: 30%;
-	width: 500px;
-	height: 300px;
-	background: #ffffff;
-	z-index: 51;
-	padding: 10px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	-moz-box-shadow: 0px 0px 5px #444444;
-	-webkit-box-shadow: 0px 0px 5px #444444;
-	box-shadow: 0px 0px 5px #444444;
-	display: none;
-}
-
-.lightbox-close {
-	float: right;
-	margin-right: 6px;
-	cursor: pointer;
-}*/
 
 /* site title
 ----------------------------------------------------------*/
@@ -421,9 +386,14 @@ div.toggle {
 		font-weight: 700;
 	}
 
-.input-group {
+.panel-watchlist .input-group {
 	text-align: center;
 	padding-bottom: 20px;
+}
+
+.input-group {
+	text-align: center;
+	padding-bottom: 75px;
 }
 
 	.input-group input[type="radio"] {
