modified buy/sell page to look nicer-ish

--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -165,8 +165,49 @@ footer {
 }
 
 .buysell-wrapper {
-	font-size: 2em;
+	text-align: center;
+	padding: 20px;
 }
+
+	.buysell-wrapper .input-group input[type="radio"] + label {
+		font-family: 'Open Sans', sans-serif;
+		font-weight: 700;
+		color: #b6b6b6;
+	}
+
+	.buysell-wrapper .input-group input[type="radio"]:nth-child(1):checked + label {
+		background-color: #99CC00;
+		color: #000;
+	}
+	
+	.buysell-wrapper .input-group input[type="radio"]:nth-child(1):hover:not(:checked) + label {
+		background-color: #D3E992;
+		color: #7f7f7f;
+	}
+	
+	.buysell-wrapper .input-group input[type="radio"]:nth-child(3):checked + label {
+		background-color: #FF4444;
+		color: #000;
+	}
+
+	.buysell-wrapper .input-group input[type="radio"]:nth-child(3):hover:not(:checked) + label {
+		background-color: #FFAFAF;
+		color: #7f7f7f;
+	}
+
+	.buysell-wrapper span {
+		font-size: 2em;	
+	}
+
+	.buysell-wrapper input[type="submit"] {
+		clear: both;
+		margin-top: 50px;
+		font-size: 2em;
+	}
+
+	.buysell-wrapper input {
+		font-size: 2em;
+	}
 
 /* site title
 ----------------------------------------------------------*/
