--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -214,6 +214,31 @@ footer {
 		font-size: 2em;
 	}
 
+.graph-wrapper {
+	margin: 20px 0px 0px 20px;
+	text-align:center;
+}
+
+.graph-wrapper input {
+	float:left;
+}
+
+.graph-wrapper .legend{
+	margin: 5px;
+	width: 25px;
+	height: 25px;
+	display: inline-block;
+	vertical-align:bottom;
+}
+
+.graph-wrapper span {
+	margin: 5px;
+	margin-right: 50px;
+	vertical-align:bottom;
+	display: inline-block;
+	font-size: 1.5em;
+}
+
 /* site title
 ----------------------------------------------------------*/
 .site-title {
