--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -324,7 +324,7 @@ input[type="range"] {
 	}
 
 .alert-wrapper {
-	box-shadow: 0 2px 6px 0px rgba(0,0,0,.2);
+	box-shadow: 0 2px 6px 0px rgba(0,0,0,.5);
 	float: right;
 	margin: 20px;
 	min-width: 400px;
@@ -355,8 +355,8 @@ input[type="range"] {
 			-ms-user-select: none;
 			user-select: none;
 			background-color: #fff;
-			border-top: 1px solid #dadada;
-			border-bottom: 1px solid #dadada;
+			border-top: 1px solid #b6b6b6;
+			border-bottom: 1px solid #b6b6b6;
 			-moz-transition: all ease .15s;
 			transition: all ease .15s;
 		}
